--- a/src/uçak.html
+++ b/src/uçak.html
@@ -8,7 +8,7 @@
 <script src="src/jsfxr.js"></script>
 <script src="src/objects.js"></script>
 <script src="src/utils.js"></script>
-<script src="src/webgl.html"></script>
+<script src="src/webgl.js"></script>
 <style>
   #fps ~ div {
   display: none;
